[package]
name = "smol-epoll-issue"
version = "0.1.0"
authors = ["oblique <psyberbits@gmail.com>"]
edition = "2018"
publish = false

[dependencies]
anyhow = "1"
futures = "0.3.5"
piper = "0.1.3"

# last good commit
#smol = { git = "https://github.com/stjepang/smol", rev = "914f3b2d1737df68524c39f426b138acb4eae17f" }

# first bad commit
smol = { git = "https://github.com/stjepang/smol", rev = "76aa1ea654a322d0abaf4291dde2eb5d89c50205" }

# master
#smol = { git = "https://github.com/stjepang/smol", branch = "master" }

[[bin]]
name = "server"
path = "src/server/main.rs"

[[bin]]
name = "client"
path = "src/client/main.rs"
